--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ MYSQL_DATABASE=wordpress_db
 MYSQL_USER=ps_user
 MYSQL_PASSWORD=ps_password
 DOMAIN=ansible-daw.ddns.net
+PS_USER=Luz
+PS_USER_LAST=SerranoDiaz
+PS_PASSWORD=password123
