--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,6 @@ services:
     ports:
       - 8080:80
     environment: 
-      # - PMA_ARBITRARY=1
       - PMA_HOST=mysql
     networks: 
       - backend-network
@@ -35,6 +34,10 @@ services:
       - PRESTASHOP_DATABASE_NAME=${MYSQL_DATABASE}
       - PRESTASHOP_DATABASE_USER=${MYSQL_USER}
       - PRESTASHOP_DATABASE_PASSWORD=${MYSQL_PASSWORD}
+      - PRESTASHOP_ENABLE_HTTPS=yes
+      - PRESTASHOP_FIRST_NAME=${PS_USER}
+      - PRESTASHOP_LAST_NAME=${PS_USER_LAST}
+      - PRESTASHOP_PASSWORD=${PS_PASSWORD}
     volumes:
       - prestashop_data:/var/www/html
     networks: 
@@ -52,8 +55,7 @@ services:
     restart: always
     environment:
       DOMAINS: '${DOMAIN} -> http://prestashop:80'
-      STAGE: 'production' # Don't use production until staging works
-      # FORCE_RENEW: 'true'
+      STAGE: 'production'
     networks:
       - frontend-network
 
